wallet creation and saving to keystore

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@ethersproject/shims": "^5.4.0",
     "@ethersproject/wallet": "^5.4.0",
     "@expo-google-fonts/dm-sans": "^0.2.0",
+    "@hookstate/core": "^3.0.13",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@tradle/react-native-http": "^2.0.1",
+    "@types/lodash": "^4.14.175",
     "assert": "^1.5.0",
+    "bignumber.js": "^9.0.1",
     "bip39": "^3.0.4",
     "browserify-zlib": "^0.1.4",
     "buffer": "^6.0.3",
@@ -29,6 +32,7 @@
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
+    "expo-secure-store": "~10.2.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
@@ -42,6 +46,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-crypto": "^2.2.0",
+    "react-native-device-info": "^8.4.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.0",
     "react-native-keychain": "^6.2.0",
