--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "events": "^3.3.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-clipboard": "~1.1.0",
     "expo-font": "~9.2.1",
     "expo-secure-store": "~10.2.0",
     "expo-splash-screen": "~0.11.2",
@@ -53,9 +54,11 @@
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.2",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.14.5",
