Added env files

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tradle/react-native-http": "^2.0.1",
     "@types/lodash": "^4.14.175",
     "assert": "^1.5.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "bignumber.js": "^9.0.1",
     "bip39": "^3.0.4",
     "browserify-zlib": "^0.1.4",
@@ -25,6 +26,7 @@
     "constants-browserify": "^1.0.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
+    "dotenv": "^10.0.0",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-util": "^7.1.1",
     "ethers": "^5.4.7",
