--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ethersproject/shims": "^5.4.0",
     "@ethersproject/wallet": "^5.4.0",
     "@expo-google-fonts/dm-sans": "^0.2.0",
+    "@expo/vector-icons": "^12.0.5",
     "@hookstate/core": "^3.0.13",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
