Update to inter font

--- a/package.json
+++ b/package.json
@@ -1,148 +1,148 @@
 {
-  "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@apollo/client": "3.2.4",
-    "@ethersproject/shims": "^5.4.0",
-    "@ethersproject/wallet": "^5.4.0",
-    "@expo-google-fonts/dm-sans": "^0.2.0",
-    "@expo/vector-icons": "^12.0.5",
-    "@hookstate/core": "^3.0.13",
-    "@react-navigation/native": "^6.0.4",
-    "@react-navigation/native-stack": "^6.2.2",
-    "@tradle/react-native-http": "^2.0.1",
-    "@types/lodash": "^4.14.175",
-    "assert": "^1.5.0",
-    "babel-plugin-inline-dotenv": "^1.6.0",
-    "bignumber.js": "^9.0.1",
-    "bip39": "^3.0.4",
-    "browserify-zlib": "^0.1.4",
-    "buffer": "^6.0.3",
-    "console-browserify": "^1.2.0",
-    "constants-browserify": "^1.0.0",
-    "dns.js": "^1.0.1",
-    "domain-browser": "^1.2.0",
-    "dotenv": "^10.0.0",
-    "eth-sig-util": "^3.0.1",
-    "ethereumjs-util": "^7.1.1",
-    "ethers": "^5.4.7",
-    "events": "^3.3.0",
-    "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
-    "expo-clipboard": "~1.1.0",
-    "expo-font": "~9.2.1",
-    "expo-secure-store": "~10.2.0",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
-    "https-browserify": "0.0.1",
-    "lodash": "^4.17.21",
-    "path-browserify": "0.0.0",
-    "process": "^0.11.10",
-    "punycode": "^1.4.1",
-    "querystring-es3": "^0.2.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-crypto": "^2.2.0",
-    "react-native-device-info": "^8.4.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-get-random-values": "^1.7.0",
-    "react-native-keychain": "^6.2.0",
-    "react-native-level-fs": "^3.0.1",
-    "react-native-os": "^1.2.6",
-    "react-native-paper": "^4.9.2",
-    "react-native-qrcode-svg": "^6.1.1",
-    "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-tcp": "^3.3.2",
-    "react-native-udp": "^2.7.0",
-    "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12",
-    "readable-stream": "^3.6.0",
-    "rn-nodeify": "^10.3.0",
-    "stream-browserify": "^3.0.0",
-    "string_decoder": "^0.10.31",
-    "timers-browserify": "^1.4.2",
-    "tty-browserify": "0.0.0",
-    "url": "^0.10.3",
-    "util": "^0.10.4",
-    "vm-browserify": "0.0.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "^0.63.57",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "eslint": "^8.4.1",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "~4.0.0"
-  },
-  "private": true,
-  "name": "crypto-bank",
-  "version": "1.0.0",
-  "react-native": {
-    "zlib": "browserify-zlib",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dns": "dns.js",
-    "net": "react-native-tcp",
-    "domain": "domain-browser",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "os": "react-native-os",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "tls": false
-  },
-  "browser": {
-    "zlib": "browserify-zlib",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dns": "dns.js",
-    "net": "react-native-tcp",
-    "domain": "domain-browser",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "os": "react-native-os",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "tls": false
-  }
+	"scripts": {
+		"start": "react-native start",
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@apollo/client": "3.2.4",
+		"@ethersproject/shims": "^5.4.0",
+		"@ethersproject/wallet": "^5.4.0",
+		"@expo-google-fonts/inter": "^0.2.0",
+		"@expo/vector-icons": "^12.0.5",
+		"@hookstate/core": "^3.0.13",
+		"@react-navigation/native": "^6.0.4",
+		"@react-navigation/native-stack": "^6.2.2",
+		"@tradle/react-native-http": "^2.0.1",
+		"@types/lodash": "^4.14.175",
+		"assert": "^1.5.0",
+		"babel-plugin-inline-dotenv": "^1.6.0",
+		"bignumber.js": "^9.0.1",
+		"bip39": "^3.0.4",
+		"browserify-zlib": "^0.1.4",
+		"buffer": "^6.0.3",
+		"console-browserify": "^1.2.0",
+		"constants-browserify": "^1.0.0",
+		"dns.js": "^1.0.1",
+		"domain-browser": "^1.2.0",
+		"dotenv": "^10.0.0",
+		"eth-sig-util": "^3.0.1",
+		"ethereumjs-util": "^7.1.1",
+		"ethers": "^5.4.7",
+		"events": "^3.3.0",
+		"expo": "~42.0.1",
+		"expo-app-loading": "^1.1.2",
+		"expo-clipboard": "~1.1.0",
+		"expo-font": "~9.2.1",
+		"expo-secure-store": "~10.2.0",
+		"expo-splash-screen": "~0.11.2",
+		"expo-status-bar": "~1.0.4",
+		"expo-updates": "~0.8.1",
+		"https-browserify": "0.0.1",
+		"lodash": "^4.17.21",
+		"path-browserify": "0.0.0",
+		"process": "^0.11.10",
+		"punycode": "^1.4.1",
+		"querystring-es3": "^0.2.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-native": "~0.63.4",
+		"react-native-crypto": "^2.2.0",
+		"react-native-device-info": "^8.4.0",
+		"react-native-gesture-handler": "~1.10.2",
+		"react-native-get-random-values": "^1.7.0",
+		"react-native-keychain": "^6.2.0",
+		"react-native-level-fs": "^3.0.1",
+		"react-native-os": "^1.2.6",
+		"react-native-paper": "^4.9.2",
+		"react-native-qrcode-svg": "^6.1.1",
+		"react-native-randombytes": "^3.6.1",
+		"react-native-reanimated": "~2.2.0",
+		"react-native-screens": "~3.4.0",
+		"react-native-tcp": "^3.3.2",
+		"react-native-udp": "^2.7.0",
+		"react-native-unimodules": "~0.14.5",
+		"react-native-web": "~0.13.12",
+		"readable-stream": "^3.6.0",
+		"rn-nodeify": "^10.3.0",
+		"stream-browserify": "^3.0.0",
+		"string_decoder": "^0.10.31",
+		"timers-browserify": "^1.4.2",
+		"tty-browserify": "0.0.0",
+		"url": "^0.10.3",
+		"util": "^0.10.4",
+		"vm-browserify": "0.0.4"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@types/react": "~16.9.35",
+		"@types/react-native": "^0.63.57",
+		"@typescript-eslint/eslint-plugin": "^5.6.0",
+		"@typescript-eslint/parser": "^5.6.0",
+		"eslint": "^8.4.1",
+		"eslint-config-airbnb": "^19.0.2",
+		"eslint-config-airbnb-typescript": "^16.1.0",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-react": "^7.27.1",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"typescript": "~4.0.0"
+	},
+	"private": true,
+	"name": "crypto-bank",
+	"version": "1.0.0",
+	"react-native": {
+		"zlib": "browserify-zlib",
+		"console": "console-browserify",
+		"constants": "constants-browserify",
+		"crypto": "react-native-crypto",
+		"dns": "dns.js",
+		"net": "react-native-tcp",
+		"domain": "domain-browser",
+		"http": "@tradle/react-native-http",
+		"https": "https-browserify",
+		"os": "react-native-os",
+		"path": "path-browserify",
+		"querystring": "querystring-es3",
+		"fs": "react-native-level-fs",
+		"_stream_transform": "readable-stream/transform",
+		"_stream_readable": "readable-stream/readable",
+		"_stream_writable": "readable-stream/writable",
+		"_stream_duplex": "readable-stream/duplex",
+		"_stream_passthrough": "readable-stream/passthrough",
+		"dgram": "react-native-udp",
+		"stream": "stream-browserify",
+		"timers": "timers-browserify",
+		"tty": "tty-browserify",
+		"vm": "vm-browserify",
+		"tls": false
+	},
+	"browser": {
+		"zlib": "browserify-zlib",
+		"console": "console-browserify",
+		"constants": "constants-browserify",
+		"crypto": "react-native-crypto",
+		"dns": "dns.js",
+		"net": "react-native-tcp",
+		"domain": "domain-browser",
+		"http": "@tradle/react-native-http",
+		"https": "https-browserify",
+		"os": "react-native-os",
+		"path": "path-browserify",
+		"querystring": "querystring-es3",
+		"fs": "react-native-level-fs",
+		"_stream_transform": "readable-stream/transform",
+		"_stream_readable": "readable-stream/readable",
+		"_stream_writable": "readable-stream/writable",
+		"_stream_duplex": "readable-stream/duplex",
+		"_stream_passthrough": "readable-stream/passthrough",
+		"dgram": "react-native-udp",
+		"stream": "stream-browserify",
+		"timers": "timers-browserify",
+		"tty": "tty-browserify",
+		"vm": "vm-browserify",
+		"tls": false
+	}
 }
