Starting exchange page

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@react-navigation/native": "^6.0.4",
 		"@react-navigation/native-stack": "^6.2.2",
 		"@tradle/react-native-http": "^2.0.1",
-		"@types/lodash": "^4.14.175",
 		"assert": "^1.5.0",
 		"babel-plugin-inline-dotenv": "^1.6.0",
 		"bignumber.js": "^9.0.1",
@@ -64,6 +63,7 @@
 		"react-native-tcp": "^3.3.2",
 		"react-native-udp": "^2.7.0",
 		"react-native-unimodules": "~0.14.5",
+		"react-native-vector-icons": "^9.0.0",
 		"react-native-web": "~0.13.12",
 		"readable-stream": "^3.6.0",
 		"rn-nodeify": "^10.3.0",
@@ -81,6 +81,8 @@
 		"@types/react-native": "^0.63.57",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
 		"@typescript-eslint/parser": "^5.6.0",
+		"@types/lodash": "^4.14.175",
+		"@types/react-native-vector-icons": "^6.4.10",
 		"eslint": "^8.4.1",
 		"eslint-config-airbnb": "^19.0.2",
 		"eslint-config-airbnb-typescript": "^16.1.0",
