Improving token cards

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
 			}
 		],
 		"indent": "off",
+		"react/jsx-one-expression-per-line": "off",
 		"@typescript-eslint/indent": ["error", "tab"],
 		"no-tabs": ["error", { "allowIndentationTabs": true }],
 		"@typescript-eslint/comma-dangle": ["error", "never"],
