--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"ethereumjs-util": "^7.1.1",
 		"ethers": "^5.4.7",
 		"events": "^3.3.0",
+		"evm-bn": "^1.1.1",
 		"expo": "~42.0.1",
 		"expo-app-loading": "^1.1.2",
 		"expo-clipboard": "~1.1.0",
@@ -77,12 +78,12 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.9.0",
+		"@types/lodash": "^4.14.175",
 		"@types/react": "~16.9.35",
 		"@types/react-native": "^0.63.57",
+		"@types/react-native-vector-icons": "^6.4.10",
 		"@typescript-eslint/eslint-plugin": "^5.6.0",
 		"@typescript-eslint/parser": "^5.6.0",
-		"@types/lodash": "^4.14.175",
-		"@types/react-native-vector-icons": "^6.4.10",
 		"eslint": "^8.4.1",
 		"eslint-config-airbnb": "^19.0.2",
 		"eslint-config-airbnb-typescript": "^16.1.0",
