--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "domain-browser": "^1.2.0",
     "dotenv": "^10.0.0",
     "eth-sig-util": "^3.0.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "ethereumjs-util": "^7.1.1",
     "ethers": "^5.4.7",
     "events": "^3.3.0",
@@ -61,6 +62,7 @@
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.14.5",
@@ -73,8 +75,7 @@
     "tty-browserify": "0.0.0",
     "url": "^0.10.3",
     "util": "^0.10.4",
-    "vm-browserify": "0.0.4",
-    "react-native-svg": "12.1.1"
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
