--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"domain-browser": "^1.2.0",
 		"dotenv": "^10.0.0",
 		"eth-sig-util": "^3.0.1",
+		"ethereum-blockies-base64": "^1.0.2",
 		"ethereumjs-util": "^7.1.1",
 		"ethers": "^5.4.7",
 		"events": "^3.3.0",
