--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-device-info": "^8.4.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^6.2.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
@@ -82,6 +83,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "^0.63.57",
+    "@types/react-native-keyboard-spacer": "^0.4.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
