--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
 			"@components/*": ["src/components/*"],
 			"@helpers/*": ["src/helpers/*"],
 			"@stores/*": ["src/stores/*"],
-			"@models/*": ["src/model/*"]
+			"@models/*": ["src/model/*"],
+			"@assets/*": ["assets/*"]
 		}
 	}
 }
