--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "url": "^0.10.3",
     "util": "^0.10.4",
     "vm-browserify": "0.0.4",
-    "react-native-svg": "12.1.1"
+    "react-native-svg": "12.1.1",
+    "expo-linking": "~2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
