--- a/package.json
+++ b/package.json
@@ -35,29 +35,31 @@
     "ethers": "^5.4.7",
     "events": "^3.3.0",
     "evm-bn": "^1.1.1",
-    "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
-    "expo-clipboard": "~1.1.0",
-    "expo-font": "~9.2.1",
-    "expo-linking": "~2.3.1",
-    "expo-secure-store": "~10.2.0",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-clipboard": "~2.1.0",
+    "expo-font": "~10.0.4",
+    "expo-linking": "~3.0.0",
+    "expo-secure-store": "~11.1.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.5",
     "https-browserify": "0.0.1",
     "lodash": "^4.17.21",
+    "main": "^1000.0.1",
+    "metro": "^0.67.0",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-crypto": "^2.2.0",
     "react-native-currency-input": "^1.0.1",
     "react-native-device-info": "^8.4.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-get-random-values": "^1.7.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-get-random-values": "~1.7.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^6.2.0",
     "react-native-level-fs": "^3.0.1",
@@ -65,15 +67,16 @@
     "react-native-paper": "^4.9.2",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
-    "react-native-unimodules": "~0.14.5",
+    "react-native-unimodules": "~0.15.0",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "readable-stream": "^3.6.0",
     "rn-nodeify": "^10.3.0",
     "stream-browserify": "^3.0.0",
@@ -85,10 +88,10 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.175",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "^0.63.57",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/react-native-keyboard-spacer": "^0.4.2",
     "@types/react-native-vector-icons": "^6.4.10",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
@@ -100,7 +103,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
   "private": true,
   "name": "crypto-bank",
