--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.175",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "^0.66.15",
     "@types/react-native-keyboard-spacer": "^0.4.2",
     "@types/react-native-vector-icons": "^6.4.10",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
