feat: screens structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
 			"@stores/*": ["src/stores/*"],
 			"@models/*": ["src/model/*"],
 			"@assets/*": ["assets/*"],
-			"@styles": ["src/styles/index.ts"],
-			"@screens/*": ["src/screens/*"],
+			"@styles": ["src/styles/index"],
+			"@screens": ["src/screens/index"],
 			"@contexts": ["src/contexts/index"],
 			"@routes": ["src/routes/index"]
 		}
