feat: Custom Text component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"baseUrl": "./",
 		"paths": {
 			"@src/*": ["src/*"],
-			"@components/*": ["src/components/*"],
+			"@components": ["src/components/index"],
 			"@helpers/*": ["src/helpers/*"],
 			"@stores/*": ["src/stores/*"],
 			"@models/*": ["src/model/*"],
