--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 			"@screens": ["src/screens/index"],
 			"@contexts": ["src/contexts/index"],
 			"@routes": ["src/routes/index"],
-			"@templates": ["src/templates/index"],
+			"@layouts": ["src/layouts/index"],
 			"@images": ["src/images/index"]
 		}
 	}
