--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-clipboard": "~2.1.0",
     "expo-font": "~10.0.4",
     "expo-linking": "~3.0.0",
+    "expo-localization": "~12.0.0",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
