feat: New theme. Created based on the design tokens defined at: https://www.figma.com/file/6LF6wwlLQg5ZvI2pGJTTXL/minke-tokens-light-%F0%9F%90%8B?node-id=0%3A1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
 			"@contexts": ["src/contexts/index"],
 			"@routes": ["src/routes/index"],
 			"@layouts": ["src/layouts/index"],
-			"@images": ["src/images/index"]
+			"@images": ["src/images/index"],
+			"@hooks": ["src/hooks/index"],
 		}
 	}
 }
