--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
     "dotenv": "^10.0.0",
+    "eth-permit": "^0.2.1",
     "eth-sig-util": "^3.0.1",
     "ethereum-blockies-base64": "^1.0.2",
     "ethereumjs-util": "^7.1.1",
