--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@tradle/react-native-http": "^2.0.1",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-shape": "^3.0.2",
     "assert": "^1.5.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "bignumber.js": "^9.0.1",
@@ -25,6 +27,8 @@
     "buffer": "^6.0.3",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.1.0",
     "date-fns": "^2.28.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
@@ -68,6 +72,7 @@
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~2.3.1",
+    "react-native-redash": "^16.2.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
