--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "~4.3.5"
+    "typescript": "4.5.5"
   },
   "private": true,
   "name": "crypto-bank",
