--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-clipboard": "~2.1.0",
     "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
