--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "evm-bn": "^1.1.1",
     "expo": "^44.0.0",
     "expo-app-loading": "~1.3.0",
+    "expo-blur": "~11.0.0",
     "expo-clipboard": "~2.1.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
