--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
 		"splash": {
 			"image": "./assets/splash.png",
 			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"backgroundColor": "#0A2138"
 		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
