--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
 	"expo": {
-		"name": "minke-wallet",
+		"name": "Minke - DeFi Wallet",
 		"slug": "minke-wallet",
 		"owner": "minkelabs",
-		"version": "1.0.0",
+		"version": "0.0.1",
 		"orientation": "portrait",
 		"icon": "./assets/icon.png",
 		"splash": {
