--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "react-native start",
+    "start": "expo start --dev-client",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
@@ -40,7 +40,7 @@
     "ethers": "^5.4.7",
     "events": "^3.3.0",
     "evm-bn": "^1.1.1",
-    "expo": "^44.0.0",
+    "expo": ">=44.0.0-0 <45.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-blur": "~11.0.0",
     "expo-clipboard": "~2.1.0",
@@ -48,6 +48,7 @@
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-localization": "~12.0.0",
+    "expo-modules-core": "~0.6.4",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
