--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"expo": {
-		"name": "Minke - DeFi Wallet",
+		"name": "Minke DeFi Wallet",
 		"slug": "minke-wallet",
 		"owner": "minkelabs",
 		"version": "0.0.1",
