--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,12 @@ target 'MinkeDeFiWallet' do
     # Workaround `Cycle inside FBReactNativeSpec` error for react-native 0.64
     # Reference: https://github.com/software-mansion/react-native-screens/issues/842#issuecomment-812543933
     installer.pods_project.targets.each do |target|
+
+			target.build_configurations.each do |config|
+				config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+				config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+			end
+
       if (target.name&.eql?('FBReactNativeSpec'))
         target.build_phases.each do |build_phase|
           if (build_phase.respond_to?(:name) && build_phase.name.eql?('[CP-User] Generate Specs'))
@@ -39,6 +45,11 @@ target 'MinkeDeFiWallet' do
   end
 
   post_integrate do |installer|
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
     begin
       expo_patch_react_imports!(installer)
     rescue => e
