--- a/ios/Podfile
+++ b/ios/Podfile
@@ -60,6 +60,11 @@ target 'MinkeDeFiWallet' do
     rescue => e
       Pod::UI.warn e
     end
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
   end
 
 end
