Revert "Fix to build"
This reverts commit 43b3177636096e2b3a85b887271224740d4f0575.

--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
 			"supportsTablet": true,
+			"bundleIdentifier": "com.minkeapp.minkewallet",
 			"buildNumber": "15"
 		},
 		"android": {
