--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ethersproject/shims": "^5.4.0",
     "@ethersproject/wallet": "^5.4.0",
     "@expo-google-fonts/inter": "^0.2.0",
-    "@expo/vector-icons": "^12.0.5",
+    "@expo/vector-icons": "^12.0.0",
     "@hookstate/core": "^3.0.13",
     "@rainbow-me/react-native-payments": "^1.1.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
@@ -33,7 +33,6 @@
     "date-fns": "^2.28.0",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
-    "dotenv": "^10.0.0",
     "eth-permit": "^0.2.1",
     "eth-sig-util": "^3.0.1",
     "ethereum-blockies-base64": "^1.0.2",
@@ -68,6 +67,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-currency-input": "^1.0.1",
     "react-native-device-info": "^8.4.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
     "react-native-keyboard-spacer": "^0.4.1",
@@ -79,13 +79,12 @@
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-redash": "^16.2.3",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
-    "react-native-unimodules": "~0.15.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "readable-stream": "^3.6.0",
@@ -102,7 +101,7 @@
     "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.175",
     "@types/react": "~17.0.21",
-    "@types/react-native": "^0.66.15",
+    "@types/react-native": "~0.64.12",
     "@types/react-native-keyboard-spacer": "^0.4.2",
     "@types/react-native-vector-icons": "^6.4.10",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
@@ -114,7 +113,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "4.5.5"
+    "react-native-bundle-visualizer": "^3.1.1",
+    "typescript": "~4.3.5"
   },
   "private": true,
   "name": "crypto-bank",
