--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-blur": "~11.0.0",
     "expo-clipboard": "~2.1.0",
+    "expo-dev-client": "^0.8.4",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
@@ -52,7 +53,6 @@
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
     "https-browserify": "0.0.1",
     "lodash": "^4.17.21",
     "main": "^1000.0.1",
