--- a/ios/MinkeDeFiWallet/MinkeDeFiWallet.entitlements
+++ b/ios/MinkeDeFiWallet/MinkeDeFiWallet.entitlements
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
-    <key>aps-environment</key>
-    <string>development</string>
-  </dict>
+<dict>
+	<key>aps-environment</key>
+	<string>development</string>
+	<key>com.apple.developer.in-app-payments</key>
+	<array>
+		<string>merchant.minke.prod</string>
+		<string>merchant.minke.test</string>
+	</array>
+</dict>
 </plist>
