--- a/ios/MinkeDeFiWallet/MinkeDeFiWallet.entitlements
+++ b/ios/MinkeDeFiWallet/MinkeDeFiWallet.entitlements
@@ -4,10 +4,28 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.icloud-container-environment</key>
+	<string>Production</string>
+	<key>com.apple.developer.icloud-container-identifiers</key>
+	<array>
+		<string>iCloud.com.minkeapp.minkewallet</string>
+	</array>
+	<key>com.apple.developer.icloud-services</key>
+	<array>
+		<string>CloudDocuments</string>
+	</array>
 	<key>com.apple.developer.in-app-payments</key>
 	<array>
 		<string>merchant.minke.prod</string>
+		<string>merchant.minke.prod2</string>
 		<string>merchant.minke.test</string>
+		<string>merchant.minke.test2</string>
 	</array>
+	<key>com.apple.developer.ubiquity-container-identifiers</key>
+	<array>
+		<string>iCloud.com.minkeapp.minkewallet</string>
+	</array>
+	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
+	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 </dict>
 </plist>
