Saving backup password in the keychain

--- a/ios/MinkeDeFiWallet/Info.plist
+++ b/ios/MinkeDeFiWallet/Info.plist
@@ -92,5 +92,7 @@
 				<string>com.minkeapp.minkewallet</string>
 			</dict>
 		</dict>
+		<key>NSFaceIDUsageDescription</key>
+		<string>Used to sign transactions and access wallet keys</string>
   </dict>
 </plist>
