--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "./scripts/postinstall.sh"
   },
   "dependencies": {
     "@apollo/client": "3.2.4",
@@ -13,6 +14,7 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@hookstate/core": "^3.0.13",
+    "@rainbow-me/react-native-payments": "^1.1.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
@@ -52,11 +54,14 @@
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "global": "^4.4.0",
     "https-browserify": "0.0.1",
     "lodash": "^4.17.21",
     "main": "^1000.0.1",
     "metro": "^0.67.0",
+    "patch-package": "^6.4.7",
     "path-browserify": "0.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
@@ -73,7 +78,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-native-keychain": "^6.2.0",
+    "react-native-keychain": "8.0.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.2",
@@ -88,7 +93,6 @@
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-vector-icons": "^9.0.0",
-		"@rainbow-me/react-native-payments": "^1.1.8",
     "react-native-web": "0.17.1",
     "readable-stream": "^3.6.0",
     "rn-nodeify": "^10.3.0",
