--- a/ios/MinkeDeFiWallet/MinkeDeFiWallet.entitlements
+++ b/ios/MinkeDeFiWallet/MinkeDeFiWallet.entitlements
@@ -4,6 +4,15 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>webcredentials:minke.app</string>
+		<string>webcredentials:www.minke.app</string>
+		<string>applinks:minke.app</string>
+		<string>applinks.www.minke.app</string>
+	</array>
+	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
+	<true/>
 	<key>com.apple.developer.icloud-container-environment</key>
 	<string>Production</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
