--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"@ethersproject/wallet": "^5.4.0",
 		"@expo-google-fonts/inter": "^0.2.0",
 		"@expo/vector-icons": "^12.0.0",
-		"@rainbow-me/react-native-payments": "^1.1.8",
 		"@hookstate/core": "^3.0.13",
+		"@rainbow-me/react-native-payments": "^1.1.8",
 		"@react-native-async-storage/async-storage": "~1.15.0",
 		"@react-navigation/native": "^6.0.4",
 		"@react-navigation/native-stack": "^6.2.2",
@@ -42,6 +42,7 @@
 		"events": "^3.3.0",
 		"evm-bn": "^1.1.1",
 		"expo": "^44.0.0",
+		"expo-analytics-amplitude": "~11.1.0",
 		"expo-app-loading": "~1.3.0",
 		"expo-blur": "~11.0.0",
 		"expo-clipboard": "~2.1.0",
