Revert test changes

--- a/.env.sample
+++ b/.env.sample
@@ -7,4 +7,5 @@ WYRE_ACCOUNT_ID_TEST=SAMPLE
 WYRE_ACCOUNT_ID=SAMPLE
 WYRE_TOKEN=SAMPLE
 WYRE_TOKEN_TEST=SAMPLE
+COVALENT_API_KEY=SAMPLE
 AMPLITUDE_PROJECT_API=SAMPLE
