--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@react-native-async-storage/async-storage": "~1.15.0",
 		"@react-navigation/native": "^6.0.4",
 		"@react-navigation/native-stack": "^6.2.2",
+		"@sentry/react-native": "^3.3.5",
 		"@tradle/react-native-http": "^2.0.1",
 		"@types/d3-scale": "^4.0.2",
 		"@types/d3-shape": "^3.0.2",
@@ -44,9 +45,12 @@
 		"expo": "^44.0.0",
 		"expo-analytics-amplitude": "~11.1.0",
 		"expo-app-loading": "~1.3.0",
+		"expo-application": "~4.0.1",
 		"expo-blur": "~11.0.0",
 		"expo-clipboard": "~2.1.0",
+		"expo-constants": "~13.0.1",
 		"expo-dev-client": "^0.8.4",
+		"expo-device": "~4.1.0",
 		"expo-font": "~10.0.4",
 		"expo-linear-gradient": "~11.0.3",
 		"expo-linking": "~3.0.0",
@@ -54,6 +58,7 @@
 		"expo-secure-store": "~11.1.0",
 		"expo-splash-screen": "~0.14.1",
 		"expo-status-bar": "~1.2.0",
+		"expo-updates": "~0.11.6",
 		"https-browserify": "0.0.1",
 		"lodash": "^4.17.21",
 		"main": "^1000.0.1",
@@ -90,6 +95,7 @@
 		"react-native-web": "0.17.1",
 		"readable-stream": "^3.6.0",
 		"rn-nodeify": "^10.3.0",
+		"sentry-expo": "^4.0.0",
 		"stream-browserify": "^3.0.0",
 		"string_decoder": "^0.10.31",
 		"timers-browserify": "^1.4.2",
