--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
+    "expo-local-authentication": "~12.1.0",
     "expo-localization": "~12.0.0",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
