--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@hookstate/core": "^3.0.13",
+    "@metamask/eth-sig-util": "^4.0.0",
     "@rainbow-me/react-native-payments": "^1.1.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.4",
@@ -39,8 +40,8 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
     "eth-permit": "^0.2.1",
-    "eth-sig-util": "^3.0.1",
     "ethereum-blockies-base64": "^1.0.2",
+    "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.1",
     "ethers": "^5.4.7",
     "events": "^3.3.0",
