--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
     "url": "^0.10.3",
+    "utf8": "^3.0.0",
     "util": "^0.10.4",
     "vm-browserify": "0.0.4"
   },
@@ -117,6 +118,7 @@
     "@types/react-native": "~0.64.12",
     "@types/react-native-keyboard-spacer": "^0.4.2",
     "@types/react-native-vector-icons": "^6.4.10",
+    "@types/utf8": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
