--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,5 @@ COVALENT_API_KEY=SAMPLE
 MINKE_MASTER_KEY=SAMPLE
 AMPLITUDE_PROJECT_API=SAMPLE
 SENTRY_DSN=SAMPLE
+ALCHEMY_API_URL_POLYGON_MAINNET=SAMPLE
+BICONOMY_API_KEY_POLYGON_MAINNET=SAMPLE
