--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "expo-linking": "~3.0.0",
     "expo-local-authentication": "~12.1.0",
     "expo-localization": "~12.0.0",
+    "expo-location": "~14.0.1",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
