--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "postinstall-postinstall": "^2.1.0",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
+    "qs": "^6.10.3",
     "querystring-es3": "^0.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -112,6 +113,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.175",
+    "@types/qs": "^6.9.7",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-keyboard-spacer": "^0.4.2",
