--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-clipboard": "~2.1.0",
     "expo-dev-client": "^0.8.4",
     "expo-font": "~10.0.4",
+    "expo-haptics": "~11.1.0",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-local-authentication": "~12.1.0",
