--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,6 @@ ALCHEMY_API_KEY_ETHEREUM=SAMPLE
 ALCHEMY_API_KEY_MATIC=SAMPLE
 ALCHEMY_API_KEY_ROPSTEN=SAMPLE
 ALCHEMY_API_KEY_KOVAN=SAMPLE
+BANXA_ENDPOINT_URL=SAMPLE
+BANXA_KEY=SAMPLE
+BANXA_SECRET=SAMPLE
