Add the referral code logic

--- a/.env.sample
+++ b/.env.sample
@@ -21,3 +21,5 @@ BANXA_ENDPOINT_URL=SAMPLE
 BANXA_KEY=SAMPLE
 BANXA_SECRET=SAMPLE
 APPS_FLYER_DEV_KEY=SAMPLE
+MINKE_API_URL=SAMPLE
+MINKE_API_KEY=SAMPLE
