--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ethersproject/wallet": "^5.4.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
+    "@getstoryteller/react-native-storyteller-sdk": "^7.0.3",
     "@hookstate/core": "^3.0.13",
     "@metamask/eth-sig-util": "^4.0.0",
     "@rainbow-me/react-native-payments": "^1.1.8",
