--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,8 @@ BANXA_ENDPOINT_URL=SAMPLE
 BANXA_KEY=SAMPLE
 BANXA_SECRET=SAMPLE
 APPS_FLYER_DEV_KEY=SAMPLE
+INTERCOM_KEY=SAMPLE
 UXCAM_API_KEY=SAMPLE
 STORYTELLER_KEY=SAMPLE
 INTERCOM_KEY=SAMPLE
+ZAPPER_API_KEY=SAMPLE
