--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,7 +112,8 @@ def enableProguardInReleaseBuilds = false
  * give correct results when using with locales other than en-US.  Note that
  * this variant is about 6MiB larger per architecture than default.
  */
-def jscFlavor = 'org.webkit:android-jsc:+'
+// def jscFlavor = 'org.webkit:android-jsc:+'
+def jscFlavor = 'org.webkit:android-jsc-intl:+'
 
 /**
  * Whether to enable the Hermes VM.
@@ -247,6 +248,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+		implementation project(':react-native-fs')
 }
 
 // Run this once to be able to run the application with BUCK
