--- a/eas.json
+++ b/eas.json
@@ -5,14 +5,23 @@
 	"build": {
 		"development": {
 			"developmentClient": true,
-			"distribution": "internal"
+			"distribution": "internal",
+			"android": {
+				"image": "latest"
+			}
 		},
 		"preview": {
-			"distribution": "internal"
+			"distribution": "internal",
+			"android": {
+				"image": "latest"
+			}
 		},
 		"production": {
 			"ios": {
 				"autoIncrement": "buildNumber"
+			},
+			"android": {
+				"image": "latest"
 			}
 		}
 	},
