Update storyteller to work with Android

--- a/.env.sample
+++ b/.env.sample
@@ -26,4 +26,5 @@ MINKE_API_URL=SAMPLE
 MINKE_API_KEY=SAMPLE
 UXCAM_API_KEY=SAMPLE
 STORYTELLER_KEY=SAMPLE
+STORYTELLER_ANDROID_KEY=SAMPLE
 ZAPPER_API_KEY=SAMPLE
