Setup android build

--- a/eas.json
+++ b/eas.json
@@ -21,7 +21,8 @@
 				"autoIncrement": "buildNumber"
 			},
 			"android": {
-				"image": "latest"
+				"image": "latest",
+				"autoIncrement": "versionCode"
 			}
 		}
 	},
