--- a/app.json
+++ b/app.json
@@ -40,7 +40,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.minkeapp.minkewallet"
+      "package": "com.minkeapp.minkewallet",
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/favicon.png"
