--- a/.env.sample
+++ b/.env.sample
@@ -29,4 +29,6 @@ STORYTELLER_KEY=SAMPLE
 STORYTELLER_ANDROID_KEY=SAMPLE
 ZAPPER_API_KEY=SAMPLE
 ON_RAMPER_API_KEY=SAMPLE
-
+MOONPAY_API_URL=SAMPLE
+MOONPAY_API_KEY=SAMPLE
+MOONPAY_SECRET_KEY=SAMPLE
